Fixed foundation.css to not interfere with text spacing and sizing options. Made index.js pull a non-minified foundation.css. Added better ranges and defaults for sizing options.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,7 +173,7 @@ button {
     display: inline-block;
     vertical-align: middle;
     padding-left: 1rem;
-    line-height: 5rem;
+    /* line-height: 5rem; */
     height: 6rem;
 }
 
@@ -421,7 +421,7 @@ button {
     color: #ffffff;
     padding: 1rem;
     line-height: 2rem;
-    height: 4.2rem;
+    /* height: 4.2rem; */
 }
 
 .gpii-fd-navButtons-back {
@@ -451,8 +451,8 @@ button {
 
 .gpii-fd-navButtons-back .gpii-fd-icon:before,
 .gpii-fd-navButtons-next .gpii-fd-icon:after {
-    position: relative;
-    font-size: 4rem;
+    /* position: relative; */
+    /* font-size: 4rem; */
 }
 
 .gpii-fd-navButtons-back .gpii-fd-icon:before {
@@ -471,7 +471,7 @@ button {
 
 .gpii-fd-navIcons {
     clear: both;
-    padding: 0 2rem;
+    //padding: 0 2rem;
 }
 
 .gpii-fd-navIcon {
@@ -1126,8 +1126,8 @@ html:lang(es-MX) .gpii-fd-keyboard-accommodationToggle {
   bottom: 0;
   width:179%;
   height:100%;
-  background-color:#425165; 
-  margin-left:10px; 
+  background-color:#425165;
+  margin-left:10px;
   padding:20px;
 }
 
